--- a/angular.json
+++ b/angular.json
@@ -106,8 +106,12 @@
           },
           "defaultConfiguration": "development",
           "options": {
-        
-          }
+          "port": 80,
+              "ssl": true,
+              "sslCert": "C:\\SIPLECE\\Certificados_SIPLECE\\SIPLECE-cert.pem",
+              "sslKey": "C:\\SIPLECE\\Certificados_SIPLECE\\SIPLECE-key.pem"
+
+            }
         },
         "extract-i18n": {
           "builder": "@angular-devkit/build-angular:extract-i18n",
